--- a/localisation/english/replace/zz_evolved_ascension_paths_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ascension_paths_l_english.yml
@@ -1938,17 +1938,17 @@ todo_ascension:0 ""
 	tec_ascension.400.desc.regular:0 "TODO ASCENSION"
 	tec_ascension.400.desc.hive:0 "TODO ASCENSION"
 	tec_ascension.400.approach.slow.regular:0 "TODO ASCENSION"
-	tec_ascension.400.approach.slow.regular.tooltip:0 "TODO ASCENSION"
+	tec_ascension.400.approach.slow.regular.tooltip:0 "$tec_adopt_ascension_approach_slow_risk$"
 	tec_ascension.400.approach.standard.regular:0 "TODO ASCENSION"
-	tec_ascension.400.approach.standard.regular.tooltip:0 "TODO ASCENSION"
+	tec_ascension.400.approach.standard.regular.tooltip:0 "$tec_adopt_ascension_approach_standard_risk$"
 	tec_ascension.400.approach.fast.regular:0 "TODO ASCENSION"
-	tec_ascension.400.approach.fast.regular.tooltip:0 "TODO ASCENSION"
+	tec_ascension.400.approach.fast.regular.tooltip:0 "$tec_adopt_ascension_approach_fast_risk$"
 	tec_ascension.400.approach.slow.hive:0 "TODO ASCENSION"
-	tec_ascension.400.approach.slow.hive.tooltip:0 "TODO ASCENSION"
+	tec_ascension.400.approach.slow.hive.tooltip:0 "$tec_adopt_ascension_approach_slow_risk$"
 	tec_ascension.400.approach.standard.hive:0 "TODO ASCENSION"
-	tec_ascension.400.approach.standard.hive.tooltip:0 "TODO ASCENSION"
+	tec_ascension.400.approach.standard.hive.tooltip:0 "$tec_adopt_ascension_approach_standard_risk$"
 	tec_ascension.400.approach.fast.hive:0 "TODO ASCENSION"
-	tec_ascension.400.approach.fast.hive.tooltip:0 "TODO ASCENSION"
+	tec_ascension.400.approach.fast.hive.tooltip:0 "$tec_adopt_ascension_approach_fast_risk$"
 	# First Hint - 
 	tec_ascension.40015.name:0 "A New Vision"
 	tec_ascension.40015.name.gestalt:0 "Everexpanded Vision"
@@ -2588,32 +2588,38 @@ todo_ascension:0 ""
 # ------------------------------------------------------------ namespace = tec_ascension.200xx
 	tec_ascension.200.name:0 "Cybernetic Augmentation"
 	tec_ascension.200.name.gestalt:0 "$ap_the_flesh_is_weak_gestalt$"
-	tec_ascension.200.desc.regular:0 "TODO ASCENSION"
-	tec_ascension.200.desc.hive:0 "TODO ASCENSION"
-	tec_ascension.200.desc.cyberhive:0 "TODO ASCENSION"
-	tec_ascension.200.desc.biohive:0 "TODO ASCENSION"
-	tec_ascension.200.desc.biomechanicalhive:0 "TODO ASCENSION"
-	tec_ascension.200.desc.machine:0 "TODO ASCENSION"
-	tec_ascension.200.desc.assimilator:0 "TODO ASCENSION"
-	tec_ascension.200.desc.servitor:0 "TODO ASCENSION"
-	tec_ascension.200.approach.slow.regular:0 "TODO ASCENSION"
-	tec_ascension.200.approach.slow.regular.tooltip:0 "TODO ASCENSION"
-	tec_ascension.200.approach.standard.regular:0 "TODO ASCENSION"
-	tec_ascension.200.approach.standard.regular.tooltip:0 "TODO ASCENSION"
-	tec_ascension.200.approach.fast.regular:0 "TODO ASCENSION"
-	tec_ascension.200.approach.fast.regular.tooltip:0 "TODO ASCENSION"
-	tec_ascension.200.approach.slow.gestalt:0 "TODO ASCENSION"
-	tec_ascension.200.approach.slow.gestalt.tooltip:0 "TODO ASCENSION"
-	tec_ascension.200.approach.standard.gestalt:0 "TODO ASCENSION"
-	tec_ascension.200.approach.standard.gestalt.tooltip:0 "TODO ASCENSION"
-	tec_ascension.200.approach.fast.gestalt:0 "TODO ASCENSION"
-	tec_ascension.200.approach.fast.gestalt.tooltip:0 "TODO ASCENSION"
-	tec_ascension.200.approach.slow.servitor:0 "TODO ASCENSION"
-	tec_ascension.200.approach.slow.servitor.tooltip:0 "TODO ASCENSION"
-	tec_ascension.200.approach.standard.servitor:0 "TODO ASCENSION"
-	tec_ascension.200.approach.standard.servitor.tooltip:0 "TODO ASCENSION"
-	tec_ascension.200.approach.fast.servitor:0 "TODO ASCENSION"
-	tec_ascension.200.approach.fast.servitor.tooltip:0 "TODO ASCENSION"
+	tec_ascension.200.desc.regular:0 "The limitation biology imposes on our development needs a way to be circumvented; our bodies are deciduous, our minds can degrade, our will can falther... and no change on the basis of those will solve the dichotomy.\n\nIt's time we rely on technology, applied to our very selves, to further amplify our capacities and overcome our limitations. It is time we use design new ways to bolster our species."
+	tec_ascension.200.desc.hive:0 "$tec_ascension.200.desc.regular$"
+	tec_ascension.200.desc.cyberhive:0 "Long ago we augmented our kind with technology, overcoming the limitations biology impose, but we need more, we need to improve ourselves.\n\nIt's time we rely on new technology, new implants, to further amplify our capacities and overcome our limitations. It is time we use design new ways to bolster our species."
+	tec_ascension.200.desc.biohive:0 "$tec_ascension.200.desc.regular$"
+	tec_ascension.200.desc.biomechanicalhive:0 "$todo_ascension$"
+	tec_ascension.200.desc.machine:0 "$todo_ascension$"
+	tec_ascension.200.desc.assimilator:0 "Long ago we augmented our organic kind with technology, overcoming the limitations biology impose and making them be part of our collective, but we need more, we need to ensure the assimilation of both organic and cybernetic worlds is... complete.\n\nIt's time we rely on new technology, new implants, to reach further and index more distinctiveness, more efficiently."
+	tec_ascension.200.desc.servitor:0 "$todo_ascension$"
+	tec_ascension.200.approach.slow.regular:0 "Take your time creating the augmentations"
+	tec_ascension.200.approach.slow.regular.tooltip:0 "$tec_adopt_ascension_approach_slow_risk$"
+	tec_ascension.200.approach.standard.regular:0 "Proceed nominally with the designs"
+	tec_ascension.200.approach.standard.regular.tooltip:0 "$tec_adopt_ascension_approach_standard_risk$"
+	tec_ascension.200.approach.fast.regular:0 "Rush the prototyping of implants!"
+	tec_ascension.200.approach.fast.regular.tooltip:0 "$tec_adopt_ascension_approach_fast_risk$"
+	tec_ascension.200.approach.slow.gestalt:0 "Time will lead us to a perfect augmentation"
+	tec_ascension.200.approach.slow.gestalt.tooltip:0 "$tec_adopt_ascension_approach_slow_risk$"
+	tec_ascension.200.approach.standard.gestalt:0 "Our collective will evolve with this new technology..."
+	tec_ascension.200.approach.standard.gestalt.tooltip:0 "$tec_adopt_ascension_approach_standard_risk$"
+	tec_ascension.200.approach.fast.gestalt:0 "We need to design these augmentations, as soon as possible"
+	tec_ascension.200.approach.fast.gestalt.tooltip:0 "$tec_adopt_ascension_approach_fast_risk$"
+	tec_ascension.200.approach.slow.assimilator:0 "Integration require time. Eventuality is inevitable"
+	tec_ascension.200.approach.slow.assimilator.tooltip:0 "$tec_adopt_ascension_approach_slow_risk$"
+	tec_ascension.200.approach.standard.assimilator:0 "Nominal design processes will ensure success"
+	tec_ascension.200.approach.standard.assimilator.tooltip:0 "$tec_adopt_ascension_approach_standard_risk$"
+	tec_ascension.200.approach.fast.assimilator:0 "Produce the implants as soon as possible."
+	tec_ascension.200.approach.fast.assimilator.tooltip:0 "$tec_adopt_ascension_approach_fast_risk$"
+	tec_ascension.200.approach.slow.servitor:0 "We need to take time for designing improvements for organics"
+	tec_ascension.200.approach.slow.servitor.tooltip:0 "$tec_adopt_ascension_approach_slow_risk$"
+	tec_ascension.200.approach.standard.servitor:0 "This will improve the quality of life of organics!"
+	tec_ascension.200.approach.standard.servitor.tooltip:0 "$tec_adopt_ascension_approach_standard_risk$"
+	tec_ascension.200.approach.fast.servitor:0 "Our organics need these improvements, as soon as possible!"
+	tec_ascension.200.approach.fast.servitor.tooltip:0 "$tec_adopt_ascension_approach_fast_risk$"
 	# First hint - Designing compatible interfaces
 	tec_ascension.20010.name:0 "Artificial Selection"
 	tec_ascension.20010.desc.regular:0 "TODO ASCENSION"
@@ -3004,23 +3010,23 @@ todo_ascension:0 ""
 	tec_ascension.300.desc.assimilators:0 "TODO ASCENSION"
 	tec_ascension.300.desc.servitors:0 "TODO ASCENSION"
 	tec_ascension.300.approach.slow.regular:0 "TODO ASCENSION"
-	tec_ascension.300.approach.slow.regular.tooltip:0 "TODO ASCENSION"
+	tec_ascension.300.approach.slow.regular.tooltip:0 "$tec_adopt_ascension_approach_slow_risk$"
 	tec_ascension.300.approach.standard.regular:0 "TODO ASCENSION"
-	tec_ascension.300.approach.standard.regular.tooltip:0 "TODO ASCENSION"
+	tec_ascension.300.approach.standard.regular.tooltip:0 "$tec_adopt_ascension_approach_standard_risk$"
 	tec_ascension.300.approach.fast.regular:0 "TODO ASCENSION"
-	tec_ascension.300.approach.fast.regular.tooltip:0 "TODO ASCENSION"
+	tec_ascension.300.approach.fast.regular.tooltip:0 "$tec_adopt_ascension_approach_fast_risk$"
 	tec_ascension.300.approach.slow.machine:0 "TODO ASCENSION"
-	tec_ascension.300.approach.slow.machine.tooltip:0 "TODO ASCENSION"
+	tec_ascension.300.approach.slow.machine.tooltip:0 "$tec_adopt_ascension_approach_slow_risk$"
 	tec_ascension.300.approach.standard.machine:0 "TODO ASCENSION"
-	tec_ascension.300.approach.standard.machine.tooltip:0 "TODO ASCENSION"
+	tec_ascension.300.approach.standard.machine.tooltip:0 "$tec_adopt_ascension_approach_standard_risk$"
 	tec_ascension.300.approach.fast.machine:0 "TODO ASCENSION"
 	tec_ascension.300.approach.fast.machine.tooltip:0 "TODO ASCENSION"
 	tec_ascension.300.approach.slow.servitor:0 "TODO ASCENSION"
-	tec_ascension.300.approach.slow.servitor.tooltip:0 "TODO ASCENSION"
+	tec_ascension.300.approach.slow.servitor.tooltip:0 "$tec_adopt_ascension_approach_slow_risk$"
 	tec_ascension.300.approach.standard.servitor:0 "TODO ASCENSION"
-	tec_ascension.300.approach.standard.servitor.tooltip:0 "TODO ASCENSION"
+	tec_ascension.300.approach.standard.servitor.tooltip:0 "$tec_adopt_ascension_approach_standard_risk$"
 	tec_ascension.300.approach.fast.servitor:0 "TODO ASCENSION"
-	tec_ascension.300.approach.fast.servitor.tooltip:0 "TODO ASCENSION"
+	tec_ascension.300.approach.fast.servitor.tooltip:0 "$tec_adopt_ascension_approach_fast_risk$"
 	# First Hint - Indicates ways to transfer a mind
 	tec_ascension.30010.name:0 "Artificial Dreams"
 	tec_ascension.30010.desc.regular:0 "TODO ASCENSION"
@@ -3140,17 +3146,17 @@ todo_ascension:0 ""
 	tec_ascension.30105.desc.assimilators:0 "REPLACE_ME"
 	tec_ascension.30105.desc.servitors:0 "REPLACE_ME"
 	tec_ascension.30105.approach.slow.regular:0 "REPLACE_ME"
-	tec_ascension.30105.approach.slow.regular.tooltip:0 "REPLACE_ME"
+	tec_ascension.30105.approach.slow.regular.tooltip:0 "$tec_adopt_ascension_approach_slow_risk$"
 	tec_ascension.30105.approach.standard.regular:0 "REPLACE_ME"
-	tec_ascension.30105.approach.standard.regular.tooltip:0 "REPLACE_ME"
+	tec_ascension.30105.approach.standard.regular.tooltip:0 "$tec_adopt_ascension_approach_standard_risk$"
 	tec_ascension.30105.approach.fast.regular:0 "REPLACE_ME"
-	tec_ascension.30105.approach.fast.regular.tooltip:0 "REPLACE_ME"
+	tec_ascension.30105.approach.fast.regular.tooltip:0 "$tec_adopt_ascension_approach_fast_risk$"
 	tec_ascension.30105.approach.slow.machine:0 "REPLACE_ME"
-	tec_ascension.30105.approach.slow.machine.tooltip:0 "REPLACE_ME"
+	tec_ascension.30105.approach.slow.machine.tooltip:0 "$tec_adopt_ascension_approach_slow_risk$"
 	tec_ascension.30105.approach.standard.machine:0 "REPLACE_ME"
-	tec_ascension.30105.approach.standard.machine.tooltip:0 "REPLACE_ME"
+	tec_ascension.30105.approach.standard.machine.tooltip:0 "$tec_adopt_ascension_approach_standard_risk$"
 	tec_ascension.30105.approach.fast.machine:0 "REPLACE_ME"
-	tec_ascension.30105.approach.fast.machine.tooltip:0 "REPLACE_ME"
+	tec_ascension.30105.approach.fast.machine.tooltip:0 "$tec_adopt_ascension_approach_fast_risk$"
 
 	tec_ascension.30120.name:0 "REPLACE_ME"
 	tec_ascension.30120.desc.regular:0 "REPLACE_ME"
