--- a/localisation/english/replace/zz_evolved_ascension_paths_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ascension_paths_l_english.yml
@@ -40,9 +40,14 @@ todo_ascension:0 ""
 
 # Techs
 	tec_situation_slowed_by_tech_genetics:0 "We should focus on unlocking further §Y$tec_loc_society_icon$ Genetic Technologies§!"
+	tec_situation_slowed_by_tech_genetics_hive:0 "We should focus on unlocking further §Y$tec_loc_society_icon$ Genetic Technologies§!"
 	tec_situation_slowed_by_tech_cybernetics:0 "We should focus on unlocking further §Y$tec_loc_engineering_icon$ $tec_loc_physics_icon$ Cybernetic Technologies§!"
-	tec_situation_slowed_by_tech_synthetics:0 "We should focus on unlocking further §Y$tec_loc_engineering_icon$ $tec_loc_physics_icon$ Synthetic Technologies§!"
+	tec_situation_slowed_by_tech_cybernetics_hive:0 "We should focus on unlocking further §Y$tec_loc_engineering_icon$ $tec_loc_physics_icon$ Cybernetic Technologies§!"
+	tec_situation_slowed_by_tech_cybernetics_machine:0 "We should focus on unlocking further §Y$tec_loc_engineering_icon$ $tec_loc_physics_icon$ Cybernetic Technologies§!"
+	tec_situation_slowed_by_tech_synthetics_regular:0 "We should focus on unlocking further §Y$tec_loc_engineering_icon$ $tec_loc_physics_icon$ Synthetic Technologies§!"
+	tec_situation_slowed_by_tech_synthetics_machine:0 "We should focus on unlocking further §Y$tec_loc_engineering_icon$ $tec_loc_physics_icon$ Synthetic Technologies§!"
 	tec_situation_slowed_by_tech_mystical:0 "We should focus on unlocking further §Y$tec_loc_society_icon$ $tec_loc_physics_icon$ Mystical Technologies§!"
+	tec_situation_slowed_by_tech_mystical_hive:0 "We should focus on unlocking further §Y$tec_loc_society_icon$ $tec_loc_physics_icon$ Mystical Technologies§!"
 # /
 
 # Situations
@@ -2066,7 +2071,7 @@ todo_ascension:0 ""
 	tec_ascension.10010.regular.notech.tooltip:0 "$tec_situation_slowed_by_tech_genetics$"
 	tec_ascension.10010.ok.hive:0 "We will improve!"
 	tec_ascension.10010.ok.hive.tooltip:0 "$todo_ascension$"
-	tec_ascension.10010.hive.notech:0 "Our technological understanding of this discovery is still too high..."
+	tec_ascension.10010.hive.notech:0 "$tec_situation_slowed_by_tech_genetics_hive$"
 	tec_ascension.10010.hive.notech.tooltip:0 "$tec_ascension.10010.regular.notech.tooltip$"
 	# Second Hint - Slows the situation - Discovered special stem cells
 	tec_ascension.10020.name:0 "Seeds of Change"
@@ -2088,7 +2093,7 @@ todo_ascension:0 ""
 	tec_ascension.10020.ok.hive:0 "We could adopt these changes to our drones."
 	tec_ascension.10020.ok.hive.tooltip:0 "$todo_ascension$"
 	tec_ascension.10020.hive.notech:0 "$tec_ascension.10010.hive.notech$"
-	tec_ascension.10020.hive.notech.tooltip:0 "$tec_ascension.10010.hive.notech$"
+	tec_ascension.10020.hive.notech.tooltip:0 "$tec_situation_slowed_by_tech_genetics_hive$"
 	# Separation - genetics vs biogenics
 	tec_ascension.10030.name:0 "Divergent Evolution"
 	tec_ascension.10030.desc.regular:0 "The discussion around the applications of the genetic discoveries reached an impasse.\nOn a side, the application of the malleable data towards specific uses can help the development of specific highly-beneficial desirable traits, that can be improved further with direct §HGenetic§! applications.\nOn the other side, the engineering of the stem cells towards more natural, but accelerated processes, can led to what we call a ''§GBiogenic§!'' development, creating mutations we can tailor intertwined with our genetic data.\n\nThe direction we decide to take will, for sure, change our entire perspective on genetics, biology and, perhaps, our species as a whole."
@@ -2121,7 +2126,7 @@ todo_ascension:0 ""
 	tec_gene_path.10050.hive:0 "We will improve, our collective wil be more."
 	tec_gene_path.10050.hive.tooltip:0 "$tec_situation_slower_notech_biological$"
 	tec_gene_path.10050.hive.notech:0 "$tec_gene_path.10050.regular.notech$"
-	tec_gene_path.10050.hive.notech.tooltip:0 "$tec_situation_slower_notech_biological$"
+	tec_gene_path.10050.hive.notech.tooltip:0 "$tec_situation_slowed_by_tech_genetics_hive$"
 
 	tec_gene_path.10060.name:0 "Tailoring Our Own Selves"
 	tec_gene_path.10060.desc.regular:0 "The first step for uncovering the secrets of a perfected genetic edition is to find the proper combination of genes that suit the purpose of moving our species to the right direction; Several pairs, triads and quad groups, out of already discovered positive genetic groups, have resulted compatible, but we need to find the ones that really result in a perfect mixture."
@@ -2553,10 +2558,10 @@ todo_ascension:0 ""
 	tec_biogenic_path.10501.desc.hivemind:0 "TODO ASCENSION"
 	tec_biogenic_path.10501.desc.machine:0 "TODO ASCENSION"
 	tec_biogenic_path.10501.desc:0 "TODO ASCENSION"
-	tec_biogenic_path.10501.interest:0 "Intriguing use of biological aplications..."
+	tec_biogenic_path.10501.interest:0 "Intriguing use of biological applications..."
 	tec_biogenic_path.10501.disdain:0 "Those discoveries only leads to imperfection and mutations..."
-	tec_biogenic_path.10501.hate:0 "Horrendous, disgusting, abobinations."
-	tec_biogenic_path.10501.same_path:0 "Same biological aplications as ours, a curious coincidence."
+	tec_biogenic_path.10501.hate:0 "Horrendous, disgusting, abominations."
+	tec_biogenic_path.10501.same_path:0 "Same biological applications as ours, a curious coincidence."
 	tec_biogenic_path.10501.concern:0 "Such biological changes are... concerning"
 	tec_biogenic_path.10501.machine:0 "Organics accelerating their deciduous demise, intriguing."
 	tec_biogenic_path.10501.assimilator:0 "Their biology shall be added to our repositories."
@@ -2622,30 +2627,30 @@ todo_ascension:0 ""
 	tec_ascension.200.approach.fast.servitor.tooltip:0 "$tec_adopt_ascension_approach_fast_risk$"
 	# First hint - Designing compatible interfaces
 	tec_ascension.20010.name:0 "Artificial Selection"
-	tec_ascension.20010.desc.regular:0 "TODO ASCENSION"
-	tec_ascension.20010.desc.hive:0 "TODO ASCENSION"
-	tec_ascension.20010.desc.cyberhive:0 "TODO ASCENSION"
-	tec_ascension.20010.desc.biohive:0 "TODO ASCENSION"
-	tec_ascension.20010.desc.biomechanicalhive:0 "TODO ASCENSION"
-	tec_ascension.20010.desc.machine:0 "TODO ASCENSION"
-	tec_ascension.20010.desc.assimilator:0 "TODO ASCENSION"
-	tec_ascension.20010.desc.servitor:0 "TODO ASCENSION"
-	tec_ascension.20010.ok.regular:0 "TODO ASCENSION"
-	tec_ascension.20010.ok.regular.tooltip:0 "TODO ASCENSION"
+	tec_ascension.20010.desc.regular:0 "When it comes to creating augmentation devices tailored for organic lifeforms, the main issue comes to compatibility; the neural connection between artificial and natural neural networks require a constant up and downstream of data, with a mutual tuning to adjust it to sane levels, to avoid interferences or disjunctions between use and intention.\nDeveloping such compatibility elements require a constant monitoring and adjustments even at prototyping level, so a thorough selection is granted."
+	tec_ascension.20010.desc.hive:0 "$tec_ascension.20010.desc.regular$"
+	tec_ascension.20010.desc.cyberhive:0 "When it comes to improving augmentation devices tailored for our cyborgs, the main issue comes to continued compatibility; the neural connection between artificial and collective neural networks require a constant up and downstream of data, with a mutual tuning to adjust it to sane levels, to avoid interferences or disjunctions between use and intention.\nDeveloping such advanced compatibility elements require a constant monitoring and adjustments even at prototyping level, so a thorough selection is granted."
+	tec_ascension.20010.desc.biohive:0 "$tec_ascension.20010.desc.regular$"
+	tec_ascension.20010.desc.biomechanicalhive:0 "When it comes to improving augmentation devices tailored for our hybrid bodies, the main issue comes to continued compatibility; the neural connection between artificial and collective neural networks require a constant up and downstream of data, with a mutual tuning to adjust it to sane levels, to avoid interferences or disjunctions between use and intention.\nDeveloping such advanced compatibility elements require a constant monitoring and adjustments even at prototyping level, so a thorough selection is granted."
+	tec_ascension.20010.desc.machine:0 "$tec_ascension.20010.desc.regular$"
+	tec_ascension.20010.desc.assimilator:0 "$tec_ascension.20010.desc.cyberhive$"
+	tec_ascension.20010.desc.servitor:0 "$tec_ascension.20010.desc.regular$"
+	tec_ascension.20010.ok.regular:0 "Compatibility must be supported"
+	tec_ascension.20010.ok.regular.tooltip:0 "$todo_ascension$"
 	tec_ascension.20010.regular.notech:0 "TODO ASCENSION"
-	tec_ascension.20010.regular.notech.tooltip:0 "TODO ASCENSION"
+	tec_ascension.20010.regular.notech.tooltip:0 ""
 	tec_ascension.20010.ok.hive:0 "TODO ASCENSION"
-	tec_ascension.20010.ok.hive.tooltip:0 "TODO ASCENSION"
+	tec_ascension.20010.ok.hive.tooltip:0 "$todo_ascension$"
 	tec_ascension.20010.ok.cyberhive:0 "TODO ASCENSION"
-	tec_ascension.20010.ok.cyberhive.tooltip:0 "TODO ASCENSION"
+	tec_ascension.20010.ok.cyberhive.tooltip:0 "$todo_ascension$"
 	tec_ascension.20010.hive.notech:0 "TODO ASCENSION"
 	tec_ascension.20010.hive.notech.tooltip:0 "TODO ASCENSION"
 	tec_ascension.20010.ok.machine:0 "TODO ASCENSION"
-	tec_ascension.20010.ok.machine.tooltip:0 "TODO ASCENSION"
+	tec_ascension.20010.ok.machine.tooltip:0 "$todo_ascension$"
 	tec_ascension.20010.ok.assimilator:0 "TODO ASCENSION"
-	tec_ascension.20010.ok.assimilator.tooltip:0 "TODO ASCENSION"
+	tec_ascension.20010.ok.assimilator.tooltip:0 "$todo_ascension$"
 	tec_ascension.20010.ok.servitor:0 "TODO ASCENSION"
-	tec_ascension.20010.ok.servitor.tooltip:0 "TODO ASCENSION"
+	tec_ascension.20010.ok.servitor.tooltip:0 "$todo_ascension$"
 	tec_ascension.20010.machine.notech:0 "TODO ASCENSION"
 	tec_ascension.20010.machine.notech.tooltip:0 "TODO ASCENSION"
 	# Second Hint - We can replace or we can integrate
@@ -2659,22 +2664,23 @@ todo_ascension:0 ""
 	tec_ascension.20020.desc.assimilator:0 "TODO ASCENSION"
 	tec_ascension.20020.desc.servitor:0 "TODO ASCENSION"
 	tec_ascension.20020.ok.regular:0 "TODO ASCENSION"
-	tec_ascension.20020.ok.regular.tooltip:0 "TODO ASCENSION"
+	tec_ascension.20020.ok.regular.tooltip:0 "$todo_ascension$"
 	tec_ascension.20020.regular.notech:0 "TODO ASCENSION"
-	tec_ascension.20020.regular.notech.tooltip:0 "TODO ASCENSION"
+	tec_ascension.20020.regular.notech.tooltip:0 "$tec_situation_slowed_by_tech_genetics$"
 	tec_ascension.20020.ok.hive:0 "TODO ASCENSION"
-	tec_ascension.20020.ok.hive.tooltip:0 "TODO ASCENSION"
+	tec_ascension.20020.ok.hive.tooltip:0 "$todo_ascension$"
 	tec_ascension.20020.ok.cyberhive:0 "TODO ASCENSION"
+	tec_ascension.20020.ok.cyberhive.tooltip:0 "$todo_ascension$"
 	tec_ascension.20020.hive.notech:0 "TODO ASCENSION"
-	tec_ascension.20020.hive.notech.tooltip:0 "TODO ASCENSION"
+	tec_ascension.20020.hive.notech.tooltip:0 "$tec_situation_slowed_by_tech_cybernetics_hive$"
 	tec_ascension.20020.ok.machine:0 "TODO ASCENSION"
-	tec_ascension.20020.ok.machine.tooltip:0 "TODO ASCENSION"
+	tec_ascension.20020.ok.machine.tooltip:0 "$todo_ascension$"
 	tec_ascension.20020.ok.assimilator:0 "TODO ASCENSION"
-	tec_ascension.20020.ok.assimilator.tooltip:0 "TODO ASCENSION"
+	tec_ascension.20020.ok.assimilator.tooltip:0 "$todo_ascension$"
 	tec_ascension.20020.ok.servitor:0 "TODO ASCENSION"
-	tec_ascension.20020.ok.servitor.tooltip:0 "TODO ASCENSION"
+	tec_ascension.20020.ok.servitor.tooltip:0 "$todo_ascension$"
 	tec_ascension.20020.machine.notech:0 "TODO ASCENSION"
-	tec_ascension.20020.machine.notech.tooltip:0 "TODO ASCENSION"
+	tec_ascension.20020.machine.notech.tooltip:0 "$tec_situation_slowed_by_tech_cybernetics_machine$"
 	# Separation - Cybernetics vs Bioware
 	tec_ascension.20030.name:0 "End Of The Line"
 	tec_ascension.20030.desc.regular:0 "TODO ASCENSION"
